# blueprints

./: README.md  docker-compose.yaml
.mogenius/: main.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/app/: main.py
backend/app/common/clients/: mongo_client.py  openai_client.py
backend/app/common/core/: ai_instructions.json  database.py  settings.py
backend/app/common/dependencies/: check_token_header.py  get_session.py
backend/app/common/models/: aimodels_model.py  headers_model.py
backend/app/health/controllers/: health_controller.py
backend/app/health/models/: health_model.py
backend/app/health/services/: health_services.py
backend/app/templates/controllers/: templates_controller.py
backend/app/templates/models/: templates_model.py
backend/app/templates/services/: templates_service.py
backend/app/tests/: conftest.py  test_main.py
backend/app/tests/health/controllers/: test_health_controller.py
backend/app/tests/templates/controllers/: test_templates_controller.py
backend/app/tests/users/controllers/: test_users_controller.py
backend/app/users/controllers/: users_controller.py
backend/app/users/models/: account.model.py  users.model.py  users_account_model.py  users_model.py
backend/app/users/services/: users_service.py
docs/: classes.wsd  dev.md  promt-chain.md
wiki/: classes.wsd  dev.md  env-example.md
