[project]
dependencies = [
  "asgi-lifespan==2.*",
  "beanie>=1.27.0",
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.2",
  "langchain-openai>=0.2.2",
  "langchain>=0.3.3",
  "motor>=3.6.0",
  "pydantic-partial>=0.5.5",
  "pydantic-settings>=2.5.2",
  "pydantic>=2.9.2",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
  "starlette>=0.38.6",
]
description = "Blueprint REST API"
name = "backend"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
[tool.pytest.ini_options]
pythonpath = [
  ".",
]
